--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "CMSC57Portfolio",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
-  },
-  "dependencies": {
-    "aos": "^2.3.4",
-    "core-js": "^3.19.3",
-    "nuxt": "^2.15.8",
-    "view-design": "^4.7.0",
-    "vue": "^2.6.14",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
-  },
-  "devDependencies": {
-    "node-sass": "^5.0.0",
-    "sass-loader": "10.1.1"
-  }
+    "name": "CMSC57Portfolio",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "nuxt",
+        "build": "nuxt build",
+        "start": "nuxt start",
+        "generate": "nuxt generate",
+        "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+    },
+    "dependencies": {
+        "aos": "^2.3.4",
+        "core-js": "^3.19.3",
+        "nuxt": "^2.15.8",
+        "view-design": "^4.7.0",
+        "vue": "^2.6.14",
+        "vue-server-renderer": "^2.6.14",
+        "vue-template-compiler": "^2.6.14",
+        "webpack": "^4.46.0"
+    },
+    "devDependencies": {
+        "node-sass": "^5.0.0",
+        "push-dir": "^0.4.1",
+        "sass-loader": "10.1.1"
+    }
 }
