about the author

--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
         "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-brands-svg-icons": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/vue-fontawesome": "^2.0.6",
+        "@nuxtjs/fontawesome": "^1.1.2",
         "aos": "^2.3.4",
         "core-js": "^3.19.3",
         "nuxt": "^2.15.8",
